--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 <table class="imgtable"><tr><td>
 <img src="/fig/wcwy.jpg" alt="Wang Chuwen" width="150px" height="200px" />&nbsp;</td>
 <td align="left"><h2>Chuwen Wang<!--<img src="/fig/cn.png" alt="CN" />--></a> <br /></h2>
-<p>Ph.D  candidate<br />
+<p>Ph.D  candidate<br /></p>
 
 
 <p><a href="mailto:www.chuwenwang@ruc.edu.cn">chuwenwang [at] ruc [dot] edu [dot] cn</a> <br />
     <a href="mailto:www.chuwenwang2001@gmail.com">chuwenwang2001 [at] gmail [dot] com</a> <br />    
 </p>
-
-59 Zhongguancun Street, Haidian, Beijing, China<br/>
+<p>Office: SIRM Room 105 and SM Room 308</br>
+59 Zhongguancun Street, Haidian, Beijing, China<br/></p>
 <a href="https://twitter.com/Chuwen_WANG" class="twitter-follow-button">Follow @WangC.W.</a>
 <script>!function(d,s,id){var
 js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
@@ -65,7 +65,7 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 </td></tr></table>
 
 <h2>About</h2>
-<p>I'm currently working in the areas of geometric topology and hyperbolic geometry, especially topics related to knot theory, the volume conjecture, and Thurston's geometrization conjecture. I also occasionally explore the geometry of anti-de Sitter (AdS) spaces. Beyond that, I have a growing interest in algebraic geometry, homotopy theory, and representation theory—particularly K-theory, quantum groups, and ribbon Hopf algebras. On the side, I enjoy thinking about ideas from mathematical physics, like the AdS/CFT correspondence, Chern-Simons gauge theory, and topological quantum field theory. These fields may seem quite different at first glance, but I'm always fascinated by the unexpected connections between them.</p>
+<p>I'm currently working in the areas of geometric topology and hyperbolic geometry, especially topics related to <b>knot theory</b>, <b>Volume Conjecture</b>, and <b>Thurston's geometrization conjecture</b>. I also occasionally explore the geometry of anti-de Sitter (<b>AdS</b>) spaces. Beyond that, I have a growing interest in algebraic geometry, homotopy theory, and representation theory—particularly <b>K-theory</b>, <b>quantum groups</b>, and <b>ribbon Hopf algebras</b>. On the side, I enjoy thinking about ideas from mathematical physics, like the <b>AdS/CFT</b> duality, <b>Chern-Simons</b> gauge theory, and topological quantum field theory (<b>TQFT</b>). These fields may seem quite different at first glance, but I'm always fascinated by the unexpected connections between them.</p>
 
 
 
