--- a/index.html
+++ b/index.html
@@ -204,28 +204,28 @@ in preparation<br />
         </td>
     </tr>
     <tr class="r2">
-        <td class="c1"> 2021/12/25  </td>
+        <td class="c1"> 2022/07/18 ~2022/07/28  </td>
         <td class="c2"> Xiamen University Summer School </td>
         <td class="c3"> Xiamen, China </td>
     </tr>
     <tr class="r3">
-        <td class="c1"> 2021/12/25 </td>
+        <td class="c1"> 2023/07/04 ~ 2023/07/08</td>
         <td class="c2"> Xiamen Geometric Topology Conference </td>
         <td class="c3"> Xiamen, China </td>
     </tr>
     <tr class="r4">
-        <td class="c1"> 2021/12/25 </td>
+        <td class="c1"> 2023/08/20 ~ 2023/09/12 </td>
         <td class="c2"> A visit to Fudan University </td>
         <td class="c3"> Shanghai, China </td>
     </tr>
     <tr class="r5">
         <td class="c1"> 2023/10/21 ~ 2023/10/22 </td>
-        <td class="c2"> China Geometry Day </td>
+        <td class="c2"> Beijing Geometry Day </td>
         <td class="c3"> Beijing, China </td>
     </tr>
     <tr class="r6">
         <td class="c1"> 2023/03/29 ~ 2023/03/31 </td>
-        <td class="c2"> China Geometry Day </td>
+        <td class="c2"> Beijing Geometry Day </td>
         <td class="c3"> Beijing, China </td>
     </tr>
     <tr class="r7">
