--- a/index.html
+++ b/index.html
@@ -205,73 +205,78 @@ in preparation<br />
     </tr>
     <tr class="r2">
         <td class="c1"> 2022/07/18 ~2022/07/28  </td>
-        <td class="c2"> Xiamen University Summer School </td>
-        <td class="c3"> Xiamen, China </td>
+        <td class="c2"> Xiamen University geometric analysis Summer School </td>
+        <td class="c3"> City Hotel Xiamen [Xiamen, China] </td>
     </tr>
     <tr class="r3">
         <td class="c1"> 2023/07/04 ~ 2023/07/08</td>
         <td class="c2"> Xiamen Geometric Topology Conference </td>
-        <td class="c3"> Xiamen, China </td>
+        <td class="c3"> Sea Lilt Park of Xiamen University [Xiamen, China] </td>
     </tr>
     <tr class="r4">
         <td class="c1"> 2023/08/20 ~ 2023/09/12 </td>
-        <td class="c2"> A visit to Fudan University </td>
-        <td class="c3"> Shanghai, China </td>
+        <td class="c2"> An academic visit to Fudan University </td>
+        <td class="c3"> Fudan University [Shanghai, China] </td>
     </tr>
     <tr class="r5">
         <td class="c1"> 2023/10/21 ~ 2023/10/22 </td>
-        <td class="c2"> Beijing Geometry Day </td>
-        <td class="c3"> Beijing, China </td>
+        <td class="c2"> Beijing Geometry Day-Tsinghua University </td>
+        <td class="c3"> Beijing Jin Yu Fengshan Hotspring Restort [Beijing, China] </td>
     </tr>
     <tr class="r6">
         <td class="c1"> 2023/03/29 ~ 2023/03/31 </td>
-        <td class="c2"> Beijing Geometry Day </td>
-        <td class="c3"> Beijing, China </td>
+        <td class="c2"> Beijing Geometry Day-Beihang University </td>
+        <td class="c3"> Beijing Kuangou Conference Center [Beijing, China] </td>
     </tr>
     <tr class="r7">
         <td class="c1"> 2024/06/29 ~ 2024/06/30 </td>
         <td class="c2"> The 4th Xi'an Geometric Topology Conference </td>
-        <td class="c3"> Xi'an, China </td>
+        <td class="c3"> Xi'an Jiaotong University [Xi'an, China] </td>
     </tr>
     <tr class="r8">
         <td class="c1"> 2024/07/06 ~ 2024/07/07 </td>
         <td class="c2"> Quantum topology skein algebra seminar </td>
-        <td class="c3"> Hefei, China </td>
+        <td class="c3"> University of Science and Technology of China [Hefei, China] </td>
     </tr>
     <tr class="r9">
         <td class="c1"> 2024/07/22 ~ 2024/07/27 </td>
         <td class="c2"> 2024 Geometric Analysis Annual Conference </td>
-        <td class="c3"> Hohhot, China </td>
+        <td class="c3"> Maison New Century Hohhot [Hohhot, China] </td>
     </tr>
     <tr class="r10">
         <td class="c1"> 2024/07/27 ~ 2024/08/03 </td>
         <td class="c2"> 2024 NKU Summer Short Course </td>
-        <td class="c3"> Hefei, China </td>
+        <td class="c3"> Nankai University [Tianjin, China] </td>
     </tr>
     <tr class="r10">
         <td class="c1"> 2024/09/18 ~ 2024/09/23 </td>
         <td class="c2"> 2024 Differential Geometry Youth Forum </td>
-        <td class="c3"> Jiaxing, China </td>
+        <td class="c3"> Xitang Ancient Town [Jiaxing, China] </td>
     </tr>
     <tr class="r11">
         <td class="c1"> 2024/10/20 </td>
-        <td class="c2"> Mathematical Seminar at the Institute of Theoretical Sciences, Xihu University </td>
-        <td class="c3"> Hangchow, China </td>
+        <td class="c2"> 006 Recent Progress on the Volume Conjecture </td>
+        <td class="c3"> Institute for Theoretical Sciences, Xihu University [Hangchow, China] </td>
     </tr>
     <tr class="r12">
+        <td class="c1"> 2024/11/09 ~ 2025/11/10 </td>
+        <td class="c2"> Beijing Geometry Day-Renmin University </td>
+        <td class="c3"> Fragrant Hill Hotel [Beijing, China] </td>
+    </tr>
+    <tr class="r13">
         <td class="c1"> 2025/03/13 ~ 2025/03/17 </td>
-        <td class="c2"> Tsinghua Sanya International Forum </td>
-        <td class="c3"> Sanya, China </td>
+        <td class="c2"> Geometric topology and their related topics </td>
+        <td class="c3"> Tsinghua Sanya International Forum [Sanya, China] </td>
     </tr>
-    <tr class="r12">
+    <tr class="r14">
         <td class="c1"> 2025/04/05 </td>
-        <td class="c2"> Beijing Geometry Day, Beijing Institute of Technology </td>
-        <td class="c3"> Beijing, China </td>
+        <td class="c2"> Beijing Geometry Day-Beijing Institute of Technology </td>
+        <td class="c3"> Beijing Friendship Hotel [Beijing, China] </td>
     </tr>
-    <tr class="r12">
+    <tr class="r15">
         <td class="c1"> 2025/05/09 ~ 2025/05/12 </td>
         <td class="c2"> Fudan University PhD Exchange Meeting </td>
-        <td class="c3"> Shanghai, China </td>
+        <td class="c3"> Fudan University [Shanghai, China] </td>
     </tr>
 </table>
 </div></div>
