--- a/index.html
+++ b/index.html
@@ -283,12 +283,7 @@ in preparation<br />
 
 <h2>Photography</h2>
 <p>TO DO</p>
-<div id="three-container"></div>
-
-<div id="instructions">
-	click and drag to control the animation
-</div>
-
+<script type="text/javascript" src="/script.js">
 
 </td>
 </tr>
