--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <p><a href="mailto:www.chuwenwang@ruc.edu.cn">chuwenwang [at] ruc [dot] edu [dot] cn</a> <br />
     <a href="mailto:www.chuwenwang2001@gmail.com">chuwenwang2001 [at] gmail [dot] com</a> <br />    
 </p>
-<p>Office: SIRM Room 115 and SM Room 308</br>
+<p>Office: SIRM Room 115 and SM Room 323</br>
 59 Zhongguancun Street, Haidian, Beijing, China<br/></p>
 <a href="https://twitter.com/Chuwen_WANG" class="twitter-follow-button">Follow @WangC.W.</a>
 <script>!function(d,s,id){var
@@ -87,7 +87,7 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 <img src="fig/twist.png" alt="CS" width="455px" height="160px" />&nbsp;</td>
 <td align="left"><ul>
 <li><p><a href="https://arxiv.org/abs/2410.20489">Volume Conjecture for hyperbolic rational Dehn-filled 3-manifolds along the twist knots</a><br />
-<b>joint work with Huabin Ge, Yunpeng Meng, Yuxuan Yang</b><br />
+<b>with Huabin Ge, Yunpeng Meng, Yuxuan Yang</b><br />
 arXiv:2410.20489 [math.GT], 2024<br />
 </p>
 </li>
